test/libyul/yulSyntaxTests/number_literals_5.yul
{
	let x := 0x1ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
}
// ----
// TypeError 6708: (12-79): Number literal too large (> 256 bits)
